Removed API keys

--- a/CitationScraperPipeline/demo3.ipynb
+++ b/CitationScraperPipeline/demo3.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "api_key = \"c9691012c0d88d2800f8b26247609a0231402853f0c2cb6c89c3d9d1fa39a41f\"  # Replace with your SerpAPI key\n",
+    "api_key = \"\"  # Replace with your SerpAPI key\n",
     "article_citation_id = \"1NtVbf1efHoJ\"  # Replace with your citation ID\n",
     "\n",
     "# List to store URLs\n",
