--- a/CitationScraperPipeline/demo1.ipynb
+++ b/CitationScraperPipeline/demo1.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "\n",
     "# SerpAPI setup\n",
-    "api_key = \"c9691012c0d88d2800f8b26247609a0231402853f0c2cb6c89c3d9d1fa39a41f\"  # Replace with your SerpAPI key\n",
+    "api_key = \"\"  # Replace with your SerpAPI key\n",
     "article_citation_id = \"1NtVbf1efHoJ\"  # Replace with your citation ID\n",
     "\n",
     "# List to store URLs\n",
@@ -199,7 +199,7 @@
     "import google.generativeai as genai\n",
     "\n",
     "# Set your Google API key\n",
-    "GOOGLE_API_KEY = \"AIzaSyCgdO2MKIHs7YbNYFD6DNB3BEpJBTG-UBM\"  # Replace with your Gemini API key\n",
+    "GOOGLE_API_KEY = \"\"  # Replace with your Gemini API key\n",
     "genai.configure(api_key=GOOGLE_API_KEY)\n",
     "\n",
     "def analyze_article_with_gemini(content):\n",
