Added README file

--- a/DataScienceProjects/CollaborativeFiltering/UserBasedCF.ipynb
+++ b/DataScienceProjects/CollaborativeFiltering/UserBasedCF.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "   user_id  item_id  rating\n",
             "0      196      242       3\n",
@@ -71,12 +57,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create a user-item matrix\n",
-        "userItemMatrix = data.pivot(index='user_id', columns='item_id', values='rating')\n",
-        "\n",
-        "print(userItemMatrix.head())"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,11 +65,10 @@
         "id": "JTshdx4NSc8X",
         "outputId": "127eac63-476e-4a5b-9e5f-e8ffceffc492"
       },
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "item_id  1     2     3     4     5     6     7     8     9     10    ...  \\\n",
             "user_id                                                              ...   \n",
@@ -109,10 +89,38 @@
             "[5 rows x 1682 columns]\n"
           ]
         }
+      ],
+      "source": [
+        "# Create a user-item matrix\n",
+        "userItemMatrix = data.pivot(index='user_id', columns='item_id', values='rating')\n",
+        "\n",
+        "print(userItemMatrix.head())"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lrSOFk6SSfUO",
+        "outputId": "d817c598-6ff4-4380-88b2-f7762bd64b03"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   user_id  item_id  rating\n",
+            "0      304      294     4.0\n",
+            "1      304      300     5.0\n",
+            "2      304      323     3.0\n",
+            "3      304      259     1.0\n",
+            "4      304      274     4.0\n"
+          ]
+        }
+      ],
       "source": [
         "testSize = 0.2\n",
         "trainMatrix = userItemMatrix.copy()\n",
@@ -132,32 +140,51 @@
         "\n",
         "testData = pd.DataFrame(testData, columns=[\"user_id\", \"item_id\", \"rating\"])\n",
         "print(testData.head())\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lrSOFk6SSfUO",
-        "outputId": "d817c598-6ff4-4380-88b2-f7762bd64b03"
-      },
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   user_id  item_id  rating\n",
-            "0      177      654     4.0\n",
-            "1      177      187     4.0\n",
-            "2      177      343     3.0\n",
-            "3      177       47     3.0\n",
-            "4      177      270     1.0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T26ybI_ISj8V",
+        "outputId": "543565e7-903a-469d-89e6-be628bc6b400"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "user_id       1         2         3         4         5         6         7    \\\n",
+            "user_id                                                                         \n",
+            "1        0.000000  0.960582  0.857075  0.919264  0.932614  0.953845  0.949546   \n",
+            "2        0.960582  0.000000  0.935601  0.946756  0.984803  0.955547  0.980502   \n",
+            "3        0.857075  0.935601  0.000000  0.919528  1.000000  0.890713  0.966636   \n",
+            "4        0.919264  0.946756  0.919528  0.000000  0.994692  0.936996  0.932050   \n",
+            "5        0.932614  0.984803  1.000000  0.994692  0.000000  0.933627  0.918380   \n",
+            "\n",
+            "user_id       8         9         10   ...       934       935       936  \\\n",
+            "user_id                                ...                                 \n",
+            "1        0.979932  0.976404  0.968304  ...  0.942682  0.875338  0.965889   \n",
+            "2        0.946414  0.940056  0.982614  ...  0.950765  0.957073  0.967400   \n",
+            "3        0.914207  0.919145  0.902444  ...  0.964901  0.948683  0.896328   \n",
+            "4        0.966988  0.993884  0.969117  ...  0.982905  1.000000  0.952164   \n",
+            "5        0.933170  0.880919  0.940114  ...  0.920066  0.943281  0.941549   \n",
+            "\n",
+            "user_id       937       938       939       940       941       942       943  \n",
+            "user_id                                                                        \n",
+            "1        0.923676  0.910709  0.944993  0.947752  0.981868  0.923505  0.929744  \n",
+            "2        0.963211  0.946455  0.974901  0.936110  0.949704  0.948493  0.977474  \n",
+            "3        0.905097  0.872572  0.993884  0.852826  0.973223  0.912009  0.989949  \n",
+            "4        0.895669  0.958333  1.000000  0.969260  0.998538  0.980173  0.976417  \n",
+            "5        0.965824  0.903752  0.943701  0.918769  0.989011  0.946235  0.909228  \n",
+            "\n",
+            "[5 rows x 943 columns]\n"
+          ]
+        }
+      ],
       "source": [
         "def calculateSimilarityMatrix(matrix):\n",
         "    users = matrix.index\n",
@@ -193,51 +220,15 @@
         "userSimilarity = pd.DataFrame(calculateSimilarityMatrix(trainMatrix), index=trainMatrix.index, columns=trainMatrix.index)\n",
         "\n",
         "print(userSimilarity.head())\n"
-      ],
-      "metadata": {
-        "id": "T26ybI_ISj8V",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "543565e7-903a-469d-89e6-be628bc6b400"
-      },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "user_id       1         2         3         4         5         6         7    \\\n",
-            "user_id                                                                         \n",
-            "1        0.000000  0.960582  0.857075  0.919264  0.932614  0.953845  0.943945   \n",
-            "2        0.960582  0.000000  0.935601  0.946756  0.984803  0.955547  0.967087   \n",
-            "3        0.857075  0.935601  0.000000  0.919528  1.000000  0.890713  0.879543   \n",
-            "4        0.919264  0.946756  0.919528  0.000000  0.994692  0.936996  0.882332   \n",
-            "5        0.932614  0.984803  1.000000  0.994692  0.000000  0.933627  0.908163   \n",
-            "\n",
-            "user_id       8         9         10   ...       934       935       936  \\\n",
-            "user_id                                ...                                 \n",
-            "1        0.977505  0.976404  0.968304  ...  0.942682  0.875338  0.965889   \n",
-            "2        0.958659  0.940056  0.982614  ...  0.950765  0.957073  0.967400   \n",
-            "3        0.895890  0.919145  0.902444  ...  0.964901  0.948683  0.896328   \n",
-            "4        0.976533  0.993884  0.969117  ...  0.982905  1.000000  0.952164   \n",
-            "5        0.941228  0.880919  0.940114  ...  0.920066  0.943281  0.941549   \n",
-            "\n",
-            "user_id       937       938       939       940       941       942       943  \n",
-            "user_id                                                                        \n",
-            "1        0.916330  0.910709  0.944993  0.939332  0.970836  0.923505  0.929744  \n",
-            "2        0.966063  0.946455  0.974901  0.927367  0.940225  0.948493  0.977474  \n",
-            "3        0.840511  0.872572  0.993884  0.845205  0.973223  0.912009  0.989949  \n",
-            "4        0.895669  0.958333  1.000000  0.972516  0.998538  0.980173  0.976417  \n",
-            "5        0.965824  0.903752  0.943701  0.936202  0.975643  0.946235  0.909228  \n",
-            "\n",
-            "[5 rows x 943 columns]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {
+        "id": "hp32SuTxSl0F"
+      },
+      "outputs": [],
       "source": [
         "def predictRating(user, item, k):\n",
         "    # Sort similar users\n",
@@ -259,23 +250,11 @@
         "    return np.nan\n",
         "\n",
         "testData[\"predicted_rating\"] = testData.apply(lambda row: predictRating(row[\"user_id\"], row[\"item_id\"], 5), axis=1)\n"
-      ],
-      "metadata": {
-        "id": "hp32SuTxSl0F"
-      },
-      "execution_count": 50,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def calculateRMSE(actualRatings, predictedRatings):\n",
-        "    mask = ~np.isnan(predictedRatings)\n",
-        "    return sqrt((np.mean((actualRatings[mask] - predictedRatings[mask])** 2)))\n",
-        "\n",
-        "rmse = calculateRMSE(testData[\"rating\"], testData[\"predicted_rating\"])\n",
-        "print(\"RMSE:\" + str(rmse))"
-      ],
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -283,19 +262,29 @@
         "id": "yJU1zNyMSngi",
         "outputId": "561835d7-3177-4698-fe98-06b5f4ec2088"
       },
-      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "RMSE:1.0670423125067228\n"
           ]
         }
+      ],
+      "source": [
+        "def calculateRMSE(actualRatings, predictedRatings):\n",
+        "    mask = ~np.isnan(predictedRatings)\n",
+        "    return sqrt((np.mean((actualRatings[mask] - predictedRatings[mask])** 2)))\n",
+        "\n",
+        "rmse = calculateRMSE(testData[\"rating\"], testData[\"predicted_rating\"])\n",
+        "print(\"RMSE:\" + str(rmse))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "oxufwvgAGhTQ"
+      },
       "source": [
         "Analysis:\n",
         "My model achieved a RMSE value of between 1.05 - 1.1\n",
@@ -306,10 +295,31 @@
         "\n",
         "Weaknesses:\n",
         "Not good at recommending items to new users that don't have much data to indicate their preferences. Not good if the data is too sparse, because there will not be many similar users to generate recommendations. The scalability can be an issue when the number of users grows, since you need to calculate similarity between every user."
-      ],
-      "metadata": {
-        "id": "oxufwvgAGhTQ"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
